<resources>
    <string name="app_name">Everyday Animation</string>
    <string name="title_activity_navact">Navact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Start</string>
    <string name="start">Nothing to see here</string>
    <string name="list">List</string>
    <string name="connected">Connected</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="motion">Motion Layout</string>
    <string name="floating">Floating Menu</string>
    <string name="state">Button Reflects State</string>
    <string name="attention">Draw Attention to an Element</string>
    <string name="morph_button">Go! Go! Go!</string>
    <string name="genre_transition">genre</string>
    <string name="title_transition">name</string>
    <string name="title_transition_end">endname</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
