<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/start_fragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/home" />
    <item
        android:id="@+id/list_fragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/list" />
    <item
        android:id="@+id/connected_fragment"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/connected" />
    <item
        android:id="@+id/artist_detail_fragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/motion" />
    <item
        android:id="@+id/floating_menu_fragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/floating" />
</menu>