<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/start_fragment">

    <fragment
        android:id="@+id/start_fragment"
        android:name="com.truxall.everydayanimation.ui.StartFragment"
        android:label="@string/home"
        tools:layout="@layout/start_fragment" />

    <fragment
        android:id="@+id/list_fragment"
        android:name="com.truxall.everydayanimation.ui.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/list_fragment" />

    <fragment
        android:id="@+id/connected_fragment"
        android:name="com.truxall.everydayanimation.ui.ConnectStartFragment"
        android:label="@string/list"
        tools:layout="@layout/connected_start_fragment" />

    <fragment
        android:id="@+id/artist_detail_fragment"
        android:name="com.truxall.everydayanimation.ui.MotionDetailFragment"
        android:label="Artist Detail"
        tools:layout="@layout/motion_detail">

    </fragment>

    <fragment
        android:id="@+id/floating_menu_fragment"
        android:name="com.truxall.everydayanimation.ui.FloatingMenuFragment"
        android:label="@string/floating"
        tools:layout="@layout/floating_menu_fragment" />

    <fragment
        android:id="@+id/button_state_fragment"
        android:name="com.truxall.everydayanimation.ui.ButtonStateFragment"
        android:label="@string/state"
        tools:layout="@layout/button_state_fragment" />

    <fragment
        android:id="@+id/button_attention_fragment"
        android:name="com.truxall.everydayanimation.ui.ButtonAttentionFragment"
        android:label="@string/attention"
        tools:layout="@layout/button_attention_fragment" />

</navigation>